--- a/wp-content/themes/understrap-child/sass/theme/partials/_atomicmouse_fontface_import.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_atomicmouse_fontface_import.scss
@@ -19,7 +19,7 @@
          url('../fonts/geomanist-light-webfont/geomanist-light-webfont.ttf') format('truetype'),
          url('../fonts/geomanist-light-webfont/geomanist-light-webfont.svg#geomanistlight') format('svg');
     font-weight: 200;
-    font-style: normal;
+    font-style: light;
 }
 
 
@@ -32,7 +32,7 @@
          url('../fonts/geomanist-regular-webfont/geomanist-regular-webfont.ttf') format('truetype'),
          url('../fonts/geomanist-regular-webfont/geomanist-regular-webfont.svg#geomanistregular') format('svg');
     font-weight: 300;
-    font-style: normal;
+    font-style: regular;
 }
 
 
@@ -46,7 +46,7 @@
          url('../fonts/geomanist-medium-webfont/geomanist-medium-webfont.ttf') format('truetype'),
          url('../fonts/geomanist-medium-webfont/geomanist-medium-webfont.svg#geomanistmedium') format('svg');
     font-weight: 400;
-    font-style: normal;
+    font-style: medium;
 }
 
 @font-face {
@@ -58,20 +58,20 @@
          url('../fonts/geomanist-bold-webfont/geomanist-bold-webfont.ttf') format('truetype'),
          url('../fonts/geomanist-bold-webfont/geomanist-bold-webfont.svg#geomanistbold') format('svg');
     font-weight: 500;
-    font-style: normal;
+    font-style: bold;
 }
 
-@font-face {
-    font-family: 'geomanist';
-    src: url('../fonts/geomanist-bold-webfont/geomanist-bold-webfont.eot');
-    src: url('../fonts/geomanist-bold-webfont/geomanist-bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/geomanist-bold-webfont/geomanist-bold-webfont.woff2') format('woff2'),
-         url('../fonts/geomanist-bold-webfont/geomanist-bold-webfont.woff') format('woff'),
-         url('../fonts/geomanist-bold-webfont/geomanist-bold-webfont.ttf') format('truetype'),
-         url('../fonts/geomanist-bold-webfont/geomanist-bold-webfont.svg#geomanistbold') format('svg');
-    font-weight: 600;
-    font-style: normal;
-}
+// @font-face {
+//     font-family: 'geomanist';
+//     src: url('../fonts/geomanist-bold-webfont/geomanist-bold-webfont.eot');
+//     src: url('../fonts/geomanist-bold-webfont/geomanist-bold-webfont.eot?#iefix') format('embedded-opentype'),
+//          url('../fonts/geomanist-bold-webfont/geomanist-bold-webfont.woff2') format('woff2'),
+//          url('../fonts/geomanist-bold-webfont/geomanist-bold-webfont.woff') format('woff'),
+//          url('../fonts/geomanist-bold-webfont/geomanist-bold-webfont.ttf') format('truetype'),
+//          url('../fonts/geomanist-bold-webfont/geomanist-bold-webfont.svg#geomanistbold') format('svg');
+//     font-weight: 600;
+//     font-style: normal;
+// }
 
 @font-face {
     font-family: 'geomanist';
@@ -81,8 +81,8 @@
          url('../fonts/geomanist-black-webfont/geomanist-black-webfont.woff') format('woff'),
          url('../fonts/geomanist-black-webfont/geomanist-black-webfont.ttf') format('truetype'),
          url('../fonts/geomanist-black-webfont/geomanist-black-webfont.svg#geomanistblack') format('svg');
-    font-weight: 700;
-    font-style: normal;
+    font-weight: 600;
+    font-style: black;
 }
 
 
