--- a/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
@@ -90,6 +90,7 @@ $ms-1_75:                   ms(1.75);
 $ms-2:                      ms(2);
 $ms-2_25:                   ms(2.25);
 $ms-2_5:                    ms(2_5);
+$ms-2_75:                   ms(2_75);
 $ms-3:                      ms(3);
 $ms-3_5:                    ms(3.5);
 $ms-4:                      ms(4);
