--- a/wp-content/themes/understrap-child/sass/child-theme.scss
+++ b/wp-content/themes/understrap-child/sass/child-theme.scss
@@ -11,4 +11,6 @@
 @import "assets/underscores"; // <------- Underscores media styles
 @import "theme/partials/_atomicmouse_type"; 
 // Any additional imported files //
+ @import "theme/devstyles";  // <--------- scratchpad for dev purposes DELETE BEFORE STAGING
  @import "theme/atomicmouse";  // <--------- Add your styles into this file
+
