--- a/wp-content/themes/understrap-child/sass/theme/atomicmouse.scss
+++ b/wp-content/themes/understrap-child/sass/theme/atomicmouse.scss
@@ -19,6 +19,9 @@ html [type=button] {
     appearance: none;
 }
 
+button:focus{
+    outline: $primary;
+}
 //
 // TODO
 //
@@ -43,7 +46,6 @@ html [type=button] {
 
 // odd container background:
 #do-box, #available-box {
-    padding-top: $rvr-4;
     padding-bottom: $rvr-4;
     background: $offwhite;
 }
@@ -65,8 +67,10 @@ html [type=button] {
 }
 
 .subhead{
-    font-weight: 400;
+    font-weight: 300;
   letter-spacing: .05rem;
+  margin-bottom: $rvr-2;
+  text-transform: uppercase;
 }
 
 .display-text {
@@ -175,7 +179,7 @@ div.body-text:last-of-type {
     font-style: italic;
     color: $primary;
 //     border-top: thin solid $primary;
-    padding-top: $rvr-4;
+    padding-top: $rvr-2;
 
     @include make-col-ready();
     @include make-col(12);
@@ -234,17 +238,7 @@ div.body-text:last-of-type {
     width: 80%;
 }
 
-a.advance-link{
-    font-family: $font-family-serif;
-    width: $ms-10;
-    align-self: center;
-    text-align: center;
-}
 
-a.advance-link svg{
-    stroke: $primary;
-    width: $ms-3;
-}
 
 .chevup {
     margin-bottom: $rvr-2;
@@ -252,6 +246,16 @@ a.advance-link svg{
 
 #testdiv {
     height: 90vh;
+}
+
+a.learn{
+    @include make-col-ready();
+    @include make-col(12);
+    text-transform: uppercase;
+    letter-spacing: .075rem;
+    font-weight: 400; 
+    text-align: center;
+    cursor: pointer;
 }
 
 .arrow {
@@ -312,6 +316,131 @@ div#page{
 // ==========================================================================
 // PANELS
 // ==========================================================================
+
+// ==========================================================================
+// basic page panel
+// ==========================================================================
+
+
+
+#pers-panel {
+    position: relative;
+
+    @include media-breakpoint-up(md) {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+    }
+}
+ 
+
+#pers-container {  
+    height: 100vh;  
+    padding-top: $rvr-4;
+    display: flex; 
+    align-items: center; 
+    margin: 0 auto;
+    flex-direction: column;
+
+    @include media-breakpoint-up(md) {
+        max-width: 800px;
+    }
+
+
+    @include media-breakpoint-up(lg) { 
+        max-width: 900px;
+    }
+}
+
+
+
+#pers-panel .mobile-subpage {
+    height: 100vh;
+    position: absolute;
+    z-index: -1;
+    top:  0;
+    left:  0;
+    width: 100%;
+    overflow: visible;
+        display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    overflow: hidden;
+    @include media-breakpoint-up(md) {
+        display: none;
+    }
+}
+
+#fam > img{
+width: 100%;
+margin-bottom:-5rem;
+}
+
+#pers-content > div.headline h2{
+font-size: ms(3.9);
+}
+
+#trend-arrow svg#Layer_1{
+    fill: $tungsten;
+    width: 105%;
+    margin-left: -3rem;
+    margin-top: 35rem;
+}
+
+
+#pers-content {
+  
+    @include make-col-ready();
+    @include make-col(12);
+    padding: 0;
+      margin-bottom: $rvr-1;
+    @include media-breakpoint-up(md) {
+        @include make-col-ready();
+        @include make-col(7);
+    }
+
+
+    @include media-breakpoint-up(lg) {
+        @include make-col-ready();
+        @include make-col(7);
+    }
+}
+
+#pers-content-block {
+
+    @include media-breakpoint-up(md) {
+        margin-bottom: $rvr-_5;
+
+        @include v-1;
+
+        padding-left: 0;
+    }
+}
+
+
+
+.pers-headline {
+    margin-bottom: $rvr-2;
+}
+
+
+#pers-proclamations {
+    max-width: $ms-12_25;
+    padding-bottom: $rvr-_5;
+    font-family: $font-family-sans-serif;
+}
+
+#pers-content .display-text{
+    margin-bottom: $rvr-2;
+}
+
+
+
+
+
+
+
 
 //
 // expertise panel
@@ -742,12 +871,27 @@ fill: #000;
     flex-basis: auto;
 }
 
-.page-id-36 a.advance-link{
-    margin-top: $rvr-4;
+.page-id-36 a.advance-link, .page-id-5 a.advance-link, {
                 @include make-col-ready();
                 @include make-col(12);
+                text-transform: uppercase;
+                letter-spacing: .075rem;
+                font-weight: 400; 
                 text-align: center;
+            }
+a.advance-link svg{
+    fill: none;
+stroke-width: 3.6765;
+stroke-linecap: round;
+stroke-miterlimit: 10;
+   stroke: $primary;
+    width: $ms-2;
 }
+
+
+
+
+
 
 #adv-head{
     flex-basis: $rvr-4;
@@ -3184,7 +3328,7 @@ flex-wrap: wrap;
 }
 
 .splash-1{
-        font-family: $font-family-serif;
+    font-family: $font-family-serif;
     font-style: italic;
     font-size: $ms-2_5;
 }
@@ -3225,7 +3369,7 @@ justify-content: flex-end;
     // flex-basis: height;
     .headline{
         flex-basis: $rvr-4; 
-        margin-bottom: unset;
+        margin-bottom: $rvr-2;
         margin-top: auto; 
         // margin-bottom: auto; 
         flex-grow: 0;
@@ -3286,7 +3430,7 @@ justify-content: flex-end;
 //                     width: auto;
 //                     }
 // }
-#splash-1{
+#splash-1, .sub-list{
     @include display-6;
         font-family: $font-family-sans-serif;
         font-style: normal;
@@ -3364,7 +3508,7 @@ justify-content: flex-end;
 // what i do panel
 // ==========================================================================
 #do-box {
-    margin-bottom: $rvr-8;
+
 
     @include media-breakpoint-up(md) {
         display: inline-flex;
@@ -3374,7 +3518,7 @@ justify-content: flex-end;
 }
 
 #do-container {
-    display: flex;
+   display: flex;
     align-items: center;
 
     @include media-breakpoint-up(md) {
@@ -3382,10 +3526,79 @@ justify-content: flex-end;
     }
 }
 
+// #do-row{
+// width: 100%;
+// }
+
 #do-container .page-title, #do-box .headline {
     // margin-bottom: rvr(2);
     @include make-col-ready();
     @include make-col(12);
+}
+
+
+#do-content{
+    margin-bottom: $rvr-2;
+    width: 100%;
+    @include media-breakpoint-up(md) {
+    .br{
+        display: none;
+    }
+}
+}
+
+#do-box .headline{
+//     margin-bottom: $rvr-2;
+}
+
+#do-content .sub-list{
+    margin-bottom: $rvr-2;
+    // font-weight: 400;
+    letter-spacing: .0025rem;
+}
+
+#do-blocks{
+    width: 100%;
+    display: flex;
+}
+
+#do-blocks .block-content{
+     @include make-col-ready();
+     @include make-col(12);
+     display: inline-flex;
+     margin-bottom: $rvr-2;
+}
+
+#do-blocks .icon{
+    @include make-col-ready();
+    @include make-col(2);
+    fill: $primary;
+}
+
+#do-blocks .block-copy{
+                @include make-col-ready();
+                @include make-col(10);
+                padding-left: $ms-1;
+}
+
+#do-blocks .caption{
+@include display-5;
+line-height: $rvr-1_25;
+font-weight: 400;
+margin-bottom: $rvr-_25;
+text-transform: capitalize;
+}
+
+#do-blocks .body-text{
+@include body-4;
+margin-top: unset;
+margin-bottom: $rvr-1;
+line-height: $rvr-1_25;
+}
+
+#do-close.body-text{
+    margin-top: unset;
+    margin-bottom: $rvr-2;
 }
 
 
@@ -3786,7 +3999,7 @@ a.btn.btn-do {
 // about- me panel
 // ==========================================================================
 #about-box {
-    margin-bottom: $rvr-8;
+
 
     @include media-breakpoint-up(md) {}
 
@@ -3810,6 +4023,10 @@ a.btn.btn-do {
     flex-direction: row;
 }
 
+#about-blocks .display-text{
+    margin-bottom: $rvr-2;
+}
+
 .about-content {
     @include media-breakpoint-up(md) {
         @include make-col-ready();
@@ -3825,8 +4042,8 @@ a.btn.btn-do {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding-right: $ms-1;
-
+    padding-right: $ms-_75;
+margin-bottom: $rvr-2;
     @include media-breakpoint-up(md) {
         @include make-col-ready();
         @include make-col(5);
@@ -3835,9 +4052,24 @@ a.btn.btn-do {
 
 
 #about-blocks > div.about-content > div:nth-child(4) {
-    font-style: italic;
+    // font-style: italic;
     margin-bottom: $rvr-4;
 }
+
+div.display-text:nth-child(3){
+    margin-bottom: 0;
+}
+
+#list{
+    font-size: $ms-1;
+    text-transform: lowercase;
+}
+
+.bullet{
+    color: $tungsten;
+    font-size: $ms-_25;
+}
+
 
 .stats .style-svg {
     fill: red;
@@ -3925,7 +4157,7 @@ a.btn.btn-do {
 }
 
 #i-create-marketing-assets {
-    margin-bottom: $rvr-8;
+    position: relative;
 
     @include media-breakpoint-up(md) {
         display: inline-flex;
@@ -3950,6 +4182,35 @@ a.btn.btn-do {
         max-width: 900px;
     }
 }
+
+.mobile-subpage {
+    height: 100vh;
+    position: absolute;
+    z-index: -1;
+    top:  0;
+    left:  0;
+    width: 100%;
+    overflow: visible;
+        display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
+    @include media-breakpoint-up(md) {
+        display: none;
+    }
+}
+
+#help-content > div.headline h2{
+font-size: ms(3.9);
+}
+
+#trend-arrow svg#Layer_1{
+    fill: $tungsten;
+    width: 105%;
+    margin-left: -3rem;
+    margin-top: 35rem;
+}
+
 
 #help-content {
     @include make-col-ready();
@@ -3997,8 +4258,8 @@ a.btn.btn-do {
     }
 }
 
+
 #help-content-block {
-    margin-bottom: $rvr-3;
 
     @include media-breakpoint-up(md) {
         margin-bottom: $rvr-_5;
@@ -4024,7 +4285,9 @@ a.btn.btn-do {
     font-family: $font-family-sans-serif;
 }
 
-
+#help-content-block .display-text{
+    margin-bottom: $rvr-2;
+}
 
 .help-display-text {
     max-width: $ms-11_75;
