--- a/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
@@ -147,7 +147,7 @@ $font-weight-black:         700;
 // ==========================================================================
 
 $h1-font-size:              $ms-7;
-$h2-font-size:              $ms-3;
+$h2-font-size:              $ms-4;
 $h3-font-size:              $ms-2_5;
 $h4-font-size:              $ms-1;
 $h5-font-size:              $ms-_75;
@@ -249,6 +249,7 @@ $rvr-_5:    calc(var(--baseline) * 0.5rem);
 $rvr-_6:    calc(var(--baseline) * 0.6rem);
 $rvr-_75:   calc(var(--baseline) * 0.75rem);
 $rvr-1:     calc(var(--baseline) * 1rem);
+$rvr-1_25:   calc(var(--baseline) * 1.25rem);
 $rvr-1_5:   calc(var(--baseline) * 1.5rem);
 $rvr-1_75:  calc(var(--baseline) * 1.75rem);
 $rvr-2:     calc(var(--baseline) * 2rem);
