--- a/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
@@ -127,7 +127,7 @@ $ms-16:                     ms(16);
 // Font Family Definitions
 // ==========================================================================
 $font-family-sans-serif:    -apple-system, BlinkMacSystemFont, geomanist, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-$font-family-monospace:     roboto, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+$font-family-monospace:     arial, roboto, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 $font-family-base:          $font-family-sans-serif;
 $font-family-serif:         adobe-garamond-pro, Georgia, Palatino, "Times New Roman", Courier;
 
