--- a/wp-content/themes/understrap-child/sass/theme/partials/_atomicmouse_type.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_atomicmouse_type.scss
@@ -51,6 +51,9 @@ h6, .h6 {
     font-size: $h6-font-size;
 }
 
+.lead{
+    font-weight: 400;
+}
 
 .display-1, .display-2, .display-3, .display-4, .display-5, .display-6, .display-7 {
     color: unset;
