--- a/wp-content/themes/understrap-child/sass/child-theme.scss
+++ b/wp-content/themes/understrap-child/sass/child-theme.scss
@@ -11,6 +11,8 @@
 @import "assets/underscores"; // <------- Underscores media styles
 @import "theme/partials/_atomicmouse_type"; 
 // Any additional imported files //
- @import "theme/devstyles";  // <--------- scratchpad for dev purposes DELETE BEFORE STAGING
+ @import "theme/devstyles";  // <--------- scratchpad for css templates DELETE BEFORE STAGING
+ @import "theme/canvas"; //<---------------css staging for invididual elements
+ @import "theme/global";//<-------combo css selectors broken out for easy reference while styleing
  @import "theme/atomicmouse";  // <--------- Add your styles into this file
 
