--- a/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
@@ -112,6 +112,7 @@ $ms-10_25:                  ms(10.25);
 $ms-10_5:                   ms(10.5);
 $ms-10_75:                  ms(10.75);
 $ms-11:                     ms(11);
+$ms-11_25:                  ms(11.25);
 $ms-11_5:                   ms(11.5);
 $ms-11_75:                  ms(11.75);
 $ms-12:                     ms(12);
@@ -162,12 +163,12 @@ $headings-color:            inherit;
 // Body Text Base Styles
 // ==========================================================================
 
-$body-1-font-size:          $ms-4;
-$body-2-font-size:          $ms-3;
-$body-3-font-size:          $ms-2;
-$body-4-font-size:          $ms-1;
-$body-5-font-size:          $ms-_75;
-$body-6-font-size:          $ms-_25;
+$body-1-font-size:          $ms-5;
+$body-2-font-size:          $ms-4;
+$body-3-font-size:          $ms-3;
+$body-4-font-size:          $ms-1_5;
+$body-5-font-size:          $ms-1;
+$body-6-font-size:          $ms-_75;
         
 $body-font-family:          $font-family-serif;
 $body-font-weight:          300;
