--- a/wp-content/themes/understrap-child/sass/theme/global.scss
+++ b/wp-content/themes/understrap-child/sass/theme/global.scss
@@ -54,7 +54,7 @@
     background-color: transparent;
 }
 
-#i-advance-business-objectives, #i-transcend-competition, #i-modernize-marketing-functions, #i-optimize-marketing-performance,#hybrid-container, #brands-container, #categories-container, #expertise-container, #cats-container, #expt {
+#hybrid-container, #brands-container, #categories-container, #expertise-container, #cats-container, #expt {
     padding-top: $rvr-4;
     padding-bottom: $rvr-3;
 }
@@ -65,7 +65,7 @@
     background: $offwhite;
 }
 
-#about-box, #do-box, #i-create-marketing-assets, #available-box{
+#about-box, #do-box, #i-create-marketing-assets, #available-box, #whyme-box, #home-cta, #splash-intro, .page-id-36, .expt-intro, #help-cta, #whyme-intro, #hybrid, #brands, #about-intro, #story, #pers-container, #splash-intro {
     padding-left: $ms-3;
     padding-right: $ms-3;
 }
@@ -119,11 +119,6 @@
     @include display-3;
     @include v-1;
     line-height: $rvr-2;
-}
-
-
-div.body-text:last-of-type {
-    padding-bottom: 0;
 }
 
 .sidenav {
@@ -194,7 +189,7 @@ div.body-text:last-of-type {
     letter-spacing: .05rem;
     font-family: $font-family-serif;
     font-style: italic;
-    color: $primary;
+    color: $secondary;
     padding: $rvr-2 0 0 0;
 
     @include media-breakpoint-up(md) {}
@@ -236,9 +231,6 @@ div.body-text:last-of-type {
     color: $tungsten;
 }
 
-.page-id-36 .headline > h2{
-    font-weight: 400;
-}
 
 // #adv-head > div > div.headline > h2{
 //     font-size: ms(2.8);
@@ -396,22 +388,7 @@ border-radius: 1rem;
 // Misc svg corrections
 // ==========================================================================
 
-.scv-diagram{
-    .st1{
-        font-weight: 600;
-    }
-    .st4{
-        font-size: $ms-1_25;
-        font-weight: 300;
-        letter-spacing: .05rem;
-    }
-    .st7{
-        font-size: $ms-_75;
-    }
-    .st1, .st4, .st6, .st7{
-        font-family: $font-family-monospace;
-    }
-}
+
 
 #goals, #metrics, #impact, #outcomes, #architecture{ 
     .cls-4, .cls-1, .cls-2, .cls-3 {
