--- a/wp-content/themes/understrap-child/sass/theme/partials/_atomicmouse_color_system.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_atomicmouse_color_system.scss
@@ -35,7 +35,7 @@ $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 $tungsten:#D2DBE2;
 $primary: #99A5B1;
-$secondary: #888888;
+$secondary: $gray-700;
 $test1: #ecf2f9;
 $offwhite1: rgba(253, 253, 253, 1);
 $offwhite: rgba(250,250,250, 1);
