--- a/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/atomicmouse_variables.scss
@@ -30,11 +30,12 @@
 // Responsive Text Controls
 // ==========================================================================
 
-
-$min_width:                 300;
+// These values are the minimum and maximum viewport sizes to apply the font scaling
+$min_width:                 200;
 $max_width:                 3000;
-
-$min_font:                  10;
+// These values represent the range of font-size to apply
+// These values effect the base font-size, headings and other elements will scale proportionally
+$min_font:                  12;
 $max_font:                  20; 
 
 :root { font-size: #{$min_font}px; }
@@ -53,7 +54,32 @@ $max_font:                  20;
 // ==========================================================================
 // Modular Scale Variables
 // ==========================================================================
-$modularscale: (base: 1rem, ratio: 1.33);
+// $modularscale: (base: 1rem, ratio: 1.33);
+
+
+$modularscale: (
+  base: 1rem,
+  ratio: 1.33,
+  576px: (  
+    ratio: 1.3,
+  ),
+  768px: (
+    base: 1.25rem,
+    ratio: 1.3,
+  ),
+  992px: (
+    base: 1rem,
+    ratio: 1.3,
+  ),
+  1200px: (
+    base: 1rem,
+    ratio: 1.3,
+  ),
+);
+
+
+
+
 $ms--10:                    ms(-10);
 $ms--9_5:                   ms(-9.5);
 $ms--9:                     ms(-9);
@@ -123,6 +149,10 @@ $ms-13_5:                   ms(13.5);
 $ms-14:                     ms(14);
 $ms-15:                     ms(15);
 $ms-16:                     ms(16);
+
+
+
+
 
 // ==========================================================================
 // Font Family Definitions
