--- a/wp-content/themes/understrap-child/sass/theme/partials/_atomicmouse_type.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_atomicmouse_type.scss
@@ -14,7 +14,7 @@ p {
 }
 
 h1, .h1 {
-    font-size: $h1-font-size;
+    @include ms-respond(font-size, 6);
     font-weight: 500;
     min-height: 1px;
     line-height: $line-height-0;
@@ -26,7 +26,7 @@ h1, .h1 {
 
 
 h2, .h2 {
-    font-size: $h2-font-size;
+    @include ms-respond(font-size, 2.75);
     font-weight: 500;
     // line-height: $line-height-2;
         letter-spacing: -.05rem;
